# changing_letters

./: LICENSE  README.md  api.py  funcoes.py  index.html  style.css
server/: Dockerfile  api.py  docker-compose.yaml  efeitos.py  pyproject.toml  requirements.txt
